# ParallelFileParsing

./: CMakeLists.txt  README.txt
ParallelFileParsing/: CMakeLists.txt  FileParsingThread.cpp  FileParsingThread.h  ParallelFileParsing.cpp  ParallelFileParsing.h  StorageImplementation.cpp  StorageImplementation.h  Thread.cpp  Thread.h  ThreadsHolder.cpp  ThreadsHolder.h
testData/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
